# lost

./: .gitignore  .gitlab-ci.yml  CHANGELOG.md  INFERENCE_SERVER_DOC.md  LICENSE  PULL_REQUEST_TEMPLATE.md  README.md  ROADMAP.md  install.sh  lost-env.sh  package-lock.json  quick_setup.py  real_README.md  temp_README.md
backend/: Dockerfile  dynamic_worker_config.py  entrypoint.sh  lostconfig.py  pyproject.toml  pytest.sh
backend/lost/: .gitignore  __init__.py  app.py  celeryconfig.py  db.sqlite  flaskapp.py  settings.py  taskman.py  wsgi.ini  wsgi.py
backend/lost/api/: api.py  base.py
backend/lost/api/anno_example/: endpoint.py
backend/lost/api/annotask/: api_definition.py  endpoint.py  parsers.py
backend/lost/api/annotasks/: api_definition.py  endpoint.py  parsers.py
backend/lost/api/auth/: OpenidCoordination.py  OpenidEndpoint.py  endpoint.py  exceptions.py
backend/lost/api/config/: api_definition.py  endpoint.py
backend/lost/api/data/: endpoint.py  parsers.py
backend/lost/api/dataset/: endpoint.py  form_validation.py
backend/lost/api/filebrowser/: api_definition.py  endpoint.py
backend/lost/api/group/: api_definition.py  endpoint.py  parsers.py
backend/lost/api/inference_model/: api_definition.py  endpoint.py
backend/lost/api/instructionmedia/: endpoint.py
backend/lost/api/instructions/: endpoint.py
backend/lost/api/label/: api_definition.py  endpoint.py  parsers.py
backend/lost/api/mia/: api_definition.py  endpoint.py
backend/lost/api/pipeline/: api_definition.py  endpoint.py  parsers.py  tasks.py
backend/lost/api/sia/: api_definition.py  endpoint.py  parsers.py
backend/lost/api/statistics/: api_definition.py  endpoint.py  example_data.py
backend/lost/api/system/: api_definiton.py  endpoint.py
backend/lost/api/triton/: api_definition.py  endpoint.py  triton_service.py
backend/lost/api/user/: api_definition.py  endpoint.py  logic.py  login_manager.py  parsers.py
backend/lost/api/worker/: api_definition.py  endpoint.py
backend/lost/cli/: copy_examples.py  export_label_tree.py  howto.md  import_all_pipes.sh  import_examples.sh  import_label_tree.py  import_packed_pipe_project.py  import_pipe_project.py  pack_pipe.py  pack_pipe_project.py  remove_all_pipes.sh  remove_label_tree.py  remove_pipe_project.py  update_pipe_project.py
backend/lost/cli/debug/: debug_sia_next.py  (+1 more)
backend/lost/database/: db.py  models.py
backend/lost/db/: access.py  db_patch.py  dtype.py  model.py  patches.py  roles.py  state.py  vis_level.py
backend/lost/logic/: anno_task.py  config.py  crypt.py  dask_session.py  db_access.py  email.py  file_access.py  file_man.py  label.py  log.py  mia.py  permissions.py  project_config.py  report.py  role_man.py  script.py  sia.py  tasks.py  template.py  user.py
backend/lost/pyapi/: anno_helper.py  anno_task.py  annos.py  datasource.py  inout.py  pe_base.py  pipe_definition.md  pipe_element.py  pipe_elements.py  pipeline.py  readme.md  script.py
backend/lost/tasks/: testtask.py
backend/lost/utils/: anno_helper.py  dump.py  testils.py  validators.py
(+2094 files in other folders)
