[project]
name = "lost"
version = "0.0.1"
description = "LOST (Label Object and Save Time) is a flexible web-based framework for simple collaborative image annotation."
authors = [{ name = "LOST Community" }]
readme = "README.md"
keywords = ['python']
requires-python = ">=3.10,<4.0"
classifiers = [
    "Intended Audience :: Developers",
    "Programming Language :: Python",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Topic :: Software Development :: Libraries :: Python Modules",
]
dependencies = [
    "cryptography>=45.0.2",
    "dask[complete]>=2024.5.1",
    "flask>=3.1.1",
    "flask-cors>=6.0.0",
    "flask-jwt-extended>=4.7.1",
    "flask-mail>=0.10.0",
    "flask-pydantic>=0.13.1",
    "flask-restx>=1.3.0",
    "flask-sqlalchemy>=3.1.1",
    "fsspec>=2025.5.0",
    "igraph>=0.11.8",
    "lost-ds==1.2.0",
    "mysqlclient>=2.2.7",
    "numpy>=2.2.6",
    "opencv-python>=4.11.0.86",
    "pandas>=2.2.3",
    "pydantic>=2.11.7",
    "pygelf>=0.4.2",
    "scikit-image>=0.25.2",
    "sqlalchemy>=2.0.41",
    "tritonclient[all]>=2.59.0",
    "uwsgi>=2.0.29",
    "werkzeug>=3.1.3",
]

[project.urls]
Homepage = "https://lost.training/"
Repository = "https://github.com/l3p-cv/lost"
Documentation = "https://lost.readthedocs.io/en/latest/"

[dependency-groups]
dev = [
    "pytest>=7.2.0",
    "pre-commit>=2.20.0",
    "tox-uv>=1.11.3",
    "deptry>=0.23.0",
    "mypy>=0.991",
    "pytest-cov>=4.0.0",
    "ruff>=0.11.5",
    "mkdocs>=1.4.2",
    "mkdocs-material>=8.5.10",
    "mkdocstrings[python]>=0.26.1",
]

# [build-system]
# requires = ["hatchling"]
# build-backend = "hatchling.build"

# [tool.setuptools]
# py-modules = ["lost"]

[tool.mypy]
files = ["lost"]
disallow_untyped_defs = true
disallow_any_unimported = true
no_implicit_optional = true
check_untyped_defs = true
warn_return_any = true
warn_unused_ignores = true
show_error_codes = true

[tool.pytest.ini_options]
testpaths = ["tests"]

[tool.ruff]
target-version = "py39"
line-length = 120
fix = true

[tool.ruff.lint]
select = [
    # flake8-2020
    "YTT",
    # flake8-bandit
    "S",
    # flake8-bugbear
    "B",
    # flake8-builtins
    "A",
    # flake8-comprehensions
    "C4",
    # flake8-debugger
    "T10",
    # flake8-simplify
    "SIM",
    # isort
    "I",
    # mccabe
    "C90",
    # pycodestyle
    "E", "W",
    # pyflakes
    "F",
    # pygrep-hooks
    "PGH",
    # pyupgrade
    "UP",
    # ruff
    "RUF",
    # tryceratops
    "TRY",
]
ignore = [
    # LineTooLong
    "E501",
    # DoNotAssignLambda
    "E731",
]

[tool.ruff.lint.per-file-ignores]
"tests/*" = ["S101"]

[tool.ruff.format]
preview = true

[tool.coverage.report]
skip_empty = true

[tool.coverage.run]
branch = true
source = ["lost"]
